# test-cadexchanger-2

./: .gitignore  README.md
CMakeProject1/: CMakeLists.txt  main.cpp
CMakeProject1/curves/: CMakeLists.txt  circel.h  circl.h  circle.cpp  circle.h  curve.h  ellipse.cpp  ellipse.h  helix.h
CMakeProject1/tests/: test_curves.cpp
testForCadexch/: CMakeLists.txt  main.cpp
testForCadexch/curves/: ellipse.h  helix.cpp
testForCadexch/tests/: CMakeLists.txt
testForCadexch/visual/: CMakeLists.txt  window.cpp  window.h
