include(FetchContent)
FetchContent_Declare(
    Catch2
    GIT_REPOSITORY https://github.com/catchorg/Catch2.git
    GIT_TAG v3.5.4
)

FetchContent_MakeAvailable(Catch2)

add_executable(curves_tests
    test_curves.cpp
)

target_link_libraries(curves_tests
    PRIVATE
        curves_lib
        Catch2::Catch2WithMain
)

include(Catch)
catch_discover_tests(curves_tests)